Fix about link in it/index.html

--- a/it/index.html
+++ b/it/index.html
@@ -176,7 +176,7 @@
 							</div>
 							<div class="tile__container">
 								<p class="tile__title">
-									<a href="about.html" class="font-bold text-link-dark text-md u u-LR">
+									<a href="info.html" class="font-bold text-link-dark text-md u u-LR">
 									Chi sono
 									</a>
 								</p>
@@ -308,6 +308,7 @@
 		</div>
 	</div>
 
+	<!-- Footer -->
 	<footer class="footer bg-blue-500 px-4 pb-4 u-shadow-inset">
 		<h5 class="title text-black">Matteo Salonia</h5>
 
