Remove link from heading where not needed

--- a/it/packages.html
+++ b/it/packages.html
@@ -44,7 +44,7 @@
 	<div class="hero u-text-center u-shadow-inset pt-8">
 		<div class="hero-body m-2-sm">
 			<div class="content w-90p w-80p-md">
-			<h2 class="headline-4"><a class="text-gray-900">Pacchetti</a></h2>
+			<h2 class="headline-4 text-gray-900">Pacchetti</h2>
 				<p class="lead">
 					Qui puoi trovare tutti i miei pacchetti per Gentoo Linux.
 				</p>
