--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 	<div class="hero u-text-center u-shadow-inset pt-4">
 		<div class="hero-body m-2-sm">
 			<div class="content w-90p w-80p-md">
-			<h3><a class="text-gray-900">Scegli una lingua &mdash; Choose a language</a></h3>
+			<h3 class="text-gray-900">Scegli una lingua &mdash; Choose a language</h3>
 
 				<div class="content u-text-left w-90p-md">
 				<div class="card">
