--- a/it/software.html
+++ b/it/software.html
@@ -44,7 +44,7 @@
 	<div class="hero u-text-center u-shadow-inset pt-8">
 		<div class="hero-body m-2-sm">
 			<div class="content w-90p w-80p-md">
-			<h2 class="headline-4"><a class="text-gray-900">Programmi</a></h2>
+			<h2 class="headline-4 text-gray-900">Programmi</h2>
 				<p class="lead">
 					Scopri tutti i programmi che ho creato in C (C99).
 				</p>
