--- a/it/info.html
+++ b/it/info.html
@@ -1,155 +1,272 @@
 <!DOCTYPE html>
-<html lang="it">
+<html>
 <head>
-	<title>Info - Salonia Matteo</title>
+	<title>Info &mdash; Matteo Salonia</title>
 
-	<!-- Optimize page loading on some devices -->
+	<!-- Optimize page loading -->
 	<meta charset="utf-8">
-	<meta content='width=device-width, initial-scale=1' name='viewport'>
-	<meta name="description" content="Informazioni su Salonia Matteo.">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<!-- Social media preview -->
-	<meta property="og:title"	content="Salonia Matteo">
-	<meta property="og:url"		content="https://salonia.it/it/info.html">
-	<meta property="og:description"	content="Informazioni su Salonia Matteo">
-	<meta property="og:image"	content="https://salonia.it/favicon.png">
+	<!-- SEO -->
+	<meta name="description"				content="Informazioni su Matteo Salonia.">
+	<meta property="og:description"			content="Informazioni su Matteo Salonia.">
+	<meta property="twitter:description"	content="Informazioni su Matteo Salonia.">
+	<meta property="og:title"				content="Info &mdash; Matteo Salonia">
+	<meta property="twitter:title"			content="Info &mdash; Matteo Salonia">
+	<meta property="og:url"					content="https://salonia.it/it/index.html">
+	<meta property="og:image"				content="https://salonia.it/favicon.png">
+	<meta property="twitter:image"			content="https://salonia.it/favicon.png">
 
-	<!-- Twitter-specific -->
-	<meta property="twitter:title"		content="Salonia Matteo">
-	<meta property="twitter:card"		content="summary_large_image">
-	<meta property="twitter:description"	content="Informazioni su Salonia Matteo">
-	<meta property="twitter:image"		content="https://salonia.it/favicon.png">
-
-	<!--Favicon-->
+	<!-- Favicon -->
 	<link rel="shortcut icon" href="../favicon.png">
 
-	<!-- Beer CSS -->
-	<link rel="stylesheet" href="../css/beer.min.css">
-	<script src="../js/beer.min.js" type="text/javascript"></script>
-	<script src="../js/light.js" type="text/javascript"></script>
-
-	<!-- Montserrat font -->
-	<link rel="stylesheet" href="../css/montserrat.css">
-
-	<!-- CSS overrides -->
-	<link rel="stylesheet" href="../css/style.css">
-
-	<script>
-	document.onreadystatechange = () => remember_prefs();
-	</script>
+	<!-- CSS & Fonts -->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/cirrus-ui/dist/cirrus.min.css">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito+Sans:600,700">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
 </head>
 
-<body class="light">
+<body>
 	<!-- Header -->
-	<header class="fixed small-padding indigo white-text">
-		<div class="grid middle-align">
-			<div class="s2">
-				<a class="button circle white indigo-text" href="index.html">
-					<i>arrow_backward</i>
-				</a>
-			</div>
-
-			<div class="s6 center-align">
-				<a class="button center-align large-text no-margin indigo-text white" href="https://salonia.it">
-					<p class="large-text">Salonia Matteo</p>
-				</a>
-			</div>
-
-			<div class="s4 right-align">
-				<img class="responsive" src="../pics/logo_rec.png" style="max-width: 100px!important" alt="Logo Matteo Salonia">
+	<div class="header header-fixed unselectable">
+		<div class="header-brand">
+			<div class="nav-item no-hover">
+				<h6 class="title">
+					<a class="text-dark u u-LR" href="index.html">
+						Matteo Salonia
+					</a>
+				</h6>
 			</div>
 		</div>
-	</header>
-
-	<!-- FAB -->
-	<button class="fixed bottom right square round extra large-margin" style="z-index: 10" onclick="toggle_light()">
-		<i class="fill">light_mode</i>
-	</button>
-
-	<div class="margin">
-	<div>
-		<h5>Informazioni su di me</h5>
-
-		<p class="large-text">
-		Vai a:<br>
-
-		<a class="button round border small-margin indigo white-text" href="#tech">Conoscenze Informatiche</a>
-		<a class="button round border small-margin indigo white-text" href="#lang">Conoscenze Linguistiche</a>
-		</p>
 	</div>
 
-	<div class="small-space"></div>
-
-	<!-- Conoscenze Informatiche -->
-	<div>
-	<article class="indigo no-padding">
-		<h5 id="tech" class="white-text padding">
-		<a href="#tech">Conoscenze Informatiche</a>
-		</h5>
-	</article>
-
-	<!-- Server -->
-	<article>
-		<h6>Gestione Server</h6>
-		<p>Gestione di <b>server Linux</b> remoti e locali, Manutenzione periodica, Accesso ristretto con <b>chiavi SSH</b> e Accesso senza password, Sicurezza alle <b>intrusioni</b> e Protezione da <b>attacchi brute-force</b>.</p>
-	</article>
-
-	<!-- Software -->
-	<article>
-		<h6>Sviluppo Software</h6>
-		<p>
-		&mdash; Progettazione e Programmazione applicazioni per <b>Linux</b> in <b>C</b> e <b>C++</b>, con <u>Interfacce Grafiche</u> e <u>Interfacce per Terminale</u>
-		<br>
-		&mdash; Progettazione e Programmazione applicazioni per <b>Android</b> in <b>Java</b>
-		<br>
-		&mdash; Progettazione e Programmazione applicazioni per <b>Windows</b> in <b>Visual Basic</b> (<b>VB.NET</b>)
-		</p>
-	</article>
-
-	<!-- Web -->
-	<article>
-		<h6>Web</h6>
-		<p>
-		&mdash; Creazione e Strutturazione logica di <u>Back-End Web Server</u> in <b>PHP</b>, con connessione a <u>Database</u>, <u>Registrazione</u>/<u>Login</u>, ecc.
-		<br>
-		&mdash; Creazione e Strutturazione <u>Pagine Web complete</u> in <b>HTML</b>
-		<br>
-		&mdash; Applicazione Stile a Pagine Web con <b>Framework CSS</b> facili da usare
-		<br>
-		&mdash; Creazione <u>Logica Client-side Web</u> in <b>JavaScript</b>, per Controllo Validit&agrave; dei dati inseriti dall'utente, <u>rispettando la privacy dell'utente</u>.
-		</p>
-	</article>
+	<!-- Info -->
+	<div class="hero u-text-center u-shadow-inset pt-8">
+		<div class="hero-body m-2-sm">
+			<div class="content w-90p w-80p-md">
+			<h2 class="headline-4"><a class="text-gray-900">Informazioni</a></h2>
+				<p class="lead">
+					Scopri chi sono, le mie competenze, e le mie conoscenze.
+				</p>
+			</div>
+		</div>
 	</div>
 
-	<div class="space"></div>
+	<!-- About me -->
+	<div class="hero u-text-center bg-blue-200 u-shadow-inset">
+		<div class="hero-body m-2-sm">
+			<div class="content">
+			<div class="grid-sm u-gap-2 u-text-left">
+				<div class="grid-c-4 grid-r-3">
+					<img class="img-stretch mb-2 u-round-lg" src="../pics/me.jpeg">
+				</div>
 
-	<!-- Conoscenze Linguistiche -->
-	<div>
-	<article class="indigo no-padding">
-		<h5 id="lang" class="white-text padding">
-		<a href="#lang">Conoscenze Linguistiche</a>
-		</h5>
-	</article>
+				<div class="grid-c-8-md">
+					<h1 class="my-0">Matteo Salonia</h1>
+				</div>
 
-	<!-- Italiano -->
-	<article>
-		<h6>Italiano</h6>
-		<p>L'Italiano &egrave; la lingua principale che uso parlando ogni giorno. Sono nato e vivo tutt'oggi in Italia.
-		<br>
-		Livello lingua Italiana: <b>Madrelingua</b>
-		</p>
-	</article>
+				<div class="grid-c-8 mr-4-lg">
+					<p>
+						Sono un ragazzo italiano originario della Sicilia, provincia di Ragusa.
+						Attualmente frequento la Ragioneria "<strong>Archimede</strong>" di Modica,
+						dove frequento il corso di programmatore, denominato <strong>SIA</strong> (<em>Sistemi Informativi Aziendali </em>).
+						Sono abile in varie materie, tra cui:
+					</p>
 
-	<!-- Inglese -->
-	<article>
-		<h6>Inglese</h6>
-		<p>
-		L'Inglese &egrave; la seconda lingua che parlo ogni giorno, usandolo nella programmazione, per comunicare con i miei amici, per usare Internet in generale, e cos&igrave; via. Parlo Inglese sin dalla 1° Media, dopo aver imparato piano piano la lingua su Internet, ascoltando varie persone parlare mentre giocavano; dopodich&egrave;, mi sono iscritto alla scuola di Inglese Cambridge University, dalla quale ho ottenuto la certificazione B2 in 3° Media.
-		<br>
-		Livello lingua Inglese: <b>B2</b> (Cambridge Certification, in 3° media), <b>C1</b> <a class="link" href="https://learnenglish.britishcouncil.org/online-english-level-test"><u>(British Council online test)</u></a>
-		</p>
-	</article>
+					<ul>
+						<li>Informatica (<strong>HTML+CSS+JS</strong>, <strong>PHP</strong>, <strong>C</strong>, <strong>Visual Basic .NET</strong>, <strong>SQL</strong>)</li>
+						<li>Inglese (<strong>Speaking</strong>, <strong>Listening</strong>, <strong>Writing</strong>)</li>
+						<li>Economia Aziendale (<strong>Bilancio</strong>, <strong>Budget</strong>, <strong>Analisi dei costi</strong>)</li>
+						<li>Matematica (<strong>Algebra</strong>, <strong>Analisi Matematica</strong>, <strong>Matematica Finanziaria</strong>)</li>
+					</ul>
+
+					<p>
+						Sono un appassionato di bodybuilding, e non solo: ogni giorno bisogna migliorare, anche di poco,
+						sia mentalmente, sia fisicamente, per poi diventare la versione migliore di se' stessi.
+					</p>
+
+					<p class="font-bold u-text-center">
+						Molti nemici, molto onore &mdash; Memento audere semper &mdash; Deus, Patria, Familia
+					</p>
+				</div>
+
+				<!-- Percorso formativo -->
+				<div class="grid-c-12 mr-4-lg">
+					<div class="card">
+						<div class="m-3">
+							<div class="tile level">
+								<div class="tile__container">
+									<p class="tile__title text-lg">Percorso formativo</p>
+
+									<ul class="menu">
+										<li class="menu-item">
+											<strong>2018 &mdash; 1° Superiore (corso AFM)</strong>
+
+											<ul class="menu">
+												<li class="menu-item">
+													Certificazione B2 inglese
+												</li>
+
+												<li class="menu-item">
+													Prima esperienza con Linux, tramite Raspbian su Raspberry Pi 0 W (1° gen),
+													e Ubuntu 16 su Sony Vaio VGN-N11M.
+												</li>
+
+												<li class="menu-item">
+													Prima esperienza con programmazione in Python
+												</li>
+
+												<li class="menu-item">
+													Sviluppo piccoli programmi in Visual Basic .NET
+												</li>
+											</ul>
+										</li>
+
+										<li class="menu-item">
+											<strong>2019 &mdash; 1-2° Superiore (corso AFM)</strong>
+
+											<ul class="menu">
+												<li class="menu-item">
+													Sviluppo esperienza con Ubuntu
+												</li>
+
+												<li class="menu-item">
+													Sviluppo frequente di siti web con vari strumenti e con stili diversi
+												</li>
+
+												<li class="menu-item">
+													Approfondimento e studio di teorie della programmazione
+												</li>
+											</ul>
+										</li>
+
+										<li class="menu-item">
+											<strong>2020 &mdash; 2-3° Superiore (corso SIA)</strong>
+
+											<ul class="menu">
+												<li class="menu-item">
+													Passaggio da Ubuntu ad Arch Linux
+												</li>
+
+												<li class="menu-item">
+													Approfondimento concetti e teorie chiave Linux
+												</li>
+
+												<li class="menu-item">
+													Redazione guida su installazione Arch Linux
+												</li>
+
+												<li class="menu-item">
+													Passaggio da Arch Linux ad Artix Linux
+												</li>
+											</ul>
+										</li>
+
+										<li class="menu-item">
+											<strong>2021 &mdash; 3-4° Superiore (corso SIA)</strong>
+
+											<ul class="menu">
+												<li class="menu-item">
+													Passaggio da Artix Linux a Gentoo Linux
+												</li>
+
+												<li class="menu-item">
+													Miglioramento notevole conoscenze Linux
+												</li>
+
+												<li class="menu-item">
+													Studio ed approfondimento linguaggio C
+												</li>
+
+												<li class="menu-item">
+													Sviluppo di vari programmi in C
+												</li>
+
+												<li class="menu-item">
+													Sviluppo piccole applicazioni Android
+												</li>
+
+												<li class="menu-item">
+													Primi passi con personalizzazione Kernel volta a
+													migliorare prestazioni ed efficienza
+												</li>
+											</ul>
+										</li>
+
+										<li class="menu-item">
+											<strong>2022 &mdash; 4-5° Superiore (corso SIA)</strong>
+
+											<ul class="menu">
+												<li class="menu-item">
+													Studio ed approfondimento teorie di programmazione
+												</li>
+
+												<li class="menu-item">
+													Studio ed approfondimento teorie di design
+												</li>
+
+												<li class="menu-item">
+													Miglioramento competenze in impianti elettrici, impianti reti locali, e sistemi di sorveglianza
+												</li>
+
+												<li class="menu-item">
+													Costruzione workstation performante con Gentoo Linux
+												</li>
+
+												<li class="menu-item">
+													Costruzione e miglioramento rete locale, con connettività IPV6
+												</li>
+											</ul>
+										</li>
+
+										<li class="menu-item">
+											<strong>2023 &mdash; 5° Superiore (corso SIA)</strong>
+
+											<ul class="menu">
+												<li class="menu-item">
+													Miglioramento prestazioni Kernel personalizzato
+												</li>
+
+												<li class="menu-item">
+													Miglioramento prestazioni ed efficienza workstation, con manutenzione periodica
+												</li>
+
+												<li class="menu-item">
+													Miglioramento rete locale
+												</li>
+
+												<li class="menu-item">
+													Approfondimento teorie e concetti dei database, con collegamento PHP
+												</li>
+
+												<li class="menu-item">
+													Redesign sito web personale
+												</li>
+											</ul>
+										</li>
+									</ul>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			</div>
+		</div>
 	</div>
+
+	<div class="u-center mt-8">
+		<a href="index.html">&larr; Torna alla pagina principale</a>
 	</div>
+
+	<!-- Footer -->
+	<footer class="footer bg-blue-500 px-4 pb-4 u-shadow-inset">
+		<h5 class="title text-black">Matteo Salonia</h5>
+
+		<a class="font-bold text-black p-2" href="https://salonia.it/it/">IT</a>
+		<a class="font-bold text-black p-2" href="https://salonia.it/en/">EN</a>
+
+		<p class="text-black mt-4 mb-0">&copy; 2023</p>
+	</footer>
 </body>
 </html>
