Redesign en/index.html, fixup it/index.html

--- a/it/index.html
+++ b/it/index.html
@@ -228,7 +228,7 @@
 	<div class="hero u-text-center u-shadow-inset" id="tools-links">
 		<div class="hero-body m-2-sm">
 			<div class="content w-90p w-80p-md">
-			<h2 class="headline-4"><a class="text-gray-900" href="#tools-links">Strumenti e Software</a></h1>
+			<h2 class="headline-4"><a class="text-gray-900" href="#tools-links">Strumenti e Link</a></h1>
 				<p class="lead">
 					Scopri strumenti e link utili, tra cui SearXNG, il portale OpenAlias, ed il mio profilo GitHub.
 				</p>
