--- a/it/info.html
+++ b/it/info.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="it">
 <head>
 	<title>Info &mdash; Matteo Salonia</title>
 
@@ -67,7 +67,7 @@
 
 				<div class="grid-c-8 mr-4-lg">
 					<p>
-						Sono un ragazzo italiano originario della Sicilia, provincia di Ragusa.
+						Sono un ragazzo Italiano originario della Sicilia, provincia di Ragusa.
 						Attualmente frequento la Ragioneria "<strong>Archimede</strong>" di Modica,
 						dove frequento il corso di programmatore, denominato <strong>SIA</strong> (<em>Sistemi Informativi Aziendali </em>).
 						Sono abile in varie materie, tra cui:
@@ -109,7 +109,7 @@
 
 												<li class="menu-item">
 													Prima esperienza con Linux, tramite Raspbian su Raspberry Pi 0 W (1° gen),
-													e Ubuntu 16 su Sony Vaio VGN-N11M.
+													e Ubuntu 16 su Sony Vaio VGN-N11M
 												</li>
 
 												<li class="menu-item">
