Add redesign TODO, fix broken link in {it,en}/index.html

--- a/it/index.html
+++ b/it/index.html
@@ -210,7 +210,7 @@
 							</div>
 							<div class="tile__container">
 								<p class="tile__title">
-									<a href="contact.html" class="font-bold text-link-dark text-md u u-LR">
+									<a href="donate.html" class="font-bold text-link-dark text-md u u-LR">
 										Donazioni
 									</a>
 								</p>
