Redesign en/software.html, fix it/software.html

--- a/it/software.html
+++ b/it/software.html
@@ -103,7 +103,7 @@
 							<div class="tile__container">
 								<p class="tile__title">
 									<a href="https://github.com/saloniamatteo/quiz" class="font-bold text-link-dark text-md u u-LR">
-									Csnake
+									Quiz
 									</a>
 								</p>
 								<p class="tile__subtitle text-black">
