--- a/en/software.html
+++ b/en/software.html
@@ -1,160 +1,157 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Software - Salonia Matteo</title>
+	<title>Programs &mdash; Matteo Salonia</title>
 
-	<!-- Optimize page loading on some devices -->
+	<!-- Optimize page loading -->
 	<meta charset="utf-8">
-	<meta content='width=device-width, initial-scale=1' name='viewport'>
-	<meta name="description" content="Programs created by Salonia Matteo">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<!-- Social media preview -->
-	<meta property="og:title"	content="Salonia Matteo">
-	<meta property="og:url"		content="https://salonia.it/en/software.html">
-	<meta property="og:description"	content="Programs created by Salonia Matteo">
-	<meta property="og:image"	content="https://salonia.it/favicon.png">
+	<!-- SEO -->
+	<meta name="description"				content="Matteo Salonia's programs.">
+	<meta property="og:description"			content="Matteo Salonia's programs.">
+	<meta property="twitter:description"	content="Matteo Salonia's programs.">
+	<meta property="og:title"				content="Programs &mdash; Matteo Salonia">
+	<meta property="twitter:title"			content="Programs &mdash; Matteo Salonia">
+	<meta property="og:url"					content="https://salonia.it/en/index.html">
+	<meta property="og:image"				content="https://salonia.it/favicon.png">
+	<meta property="twitter:image"			content="https://salonia.it/favicon.png">
 
-	<!-- Twitter-specific -->
-	<meta property="twitter:title"		content="Salonia Matteo">
-	<meta property="twitter:card"		content="summary_large_image">
-	<meta property="twitter:description"	content="Programs created by Salonia Matteo">
-	<meta property="twitter:image"		content="https://salonia.it/favicon.png">
-
-	<!--Favicon-->
+	<!-- Favicon -->
 	<link rel="shortcut icon" href="../favicon.png">
 
-	<!-- Beer CSS -->
-	<link rel="stylesheet" href="../css/beer.min.css">
-	<script src="../js/beer.min.js" type="text/javascript"></script>
-	<script src="../js/light.js" type="text/javascript"></script>
-
-	<!-- Montserrat font -->
-	<link rel="stylesheet" href="../css/montserrat.css">
-
-	<!-- CSS overrides -->
-	<link rel="stylesheet" href="../css/style.css">
-
-	<script>
-	document.onreadystatechange = () => remember_prefs();
-	</script>
+	<!-- CSS & Fonts -->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/cirrus-ui/dist/cirrus.min.css">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito+Sans:600">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:700">
 </head>
 
-<body class="light">
+<body>
 	<!-- Header -->
-	<header class="fixed small-padding indigo white-text">
-		<div class="grid middle-align">
-			<div class="s2">
-				<a class="button circle white indigo-text" href="index.html">
-					<i>arrow_backward</i>
-				</a>
-			</div>
-
-			<div class="s6 center-align">
-				<a class="button center-align large-text no-margin indigo-text white" href="https://salonia.it">
-					<p class="large-text">Salonia Matteo</p>
-				</a>
-			</div>
-
-			<div class="s4 right-align">
-				<img class="responsive" src="../pics/logo_rec.png" style="max-width: 100px!important" alt="Logo Matteo Salonia">
+	<div class="header header-fixed unselectable">
+		<div class="header-brand">
+			<div class="nav-item no-hover">
+				<h6 class="title">
+					<a class="text-dark u u-LR" href="index.html">
+						Matteo Salonia
+					</a>
+				</h6>
 			</div>
 		</div>
-	</header>
-
-	<!-- FAB -->
-	<button class="fixed bottom right square round extra large-margin" style="z-index: 10" onclick="toggle_light()">
-		<i class="fill">light_mode</i>
-	</button>
-
-	<div class="margin">
-	<div>
-		<h5>Programs created by Salonia Matteo</h5>
-
-		<p class="large-text">
-		On this page you'll find some programs created exclusively in C (C99) by me, with preferential support for GNU/Linux. Note: All of these programs use <a class="button round small no-margin" href="https://en.wikipedia.org/wiki/GNU_Autotools">GNU AutoTools&nbsp;<i>arrow_forward</i></a> for configuration and compilation, to extend portability. Also, some of these programs use one or more components of my library<a class="button round small no-margin" href="https://github.com/saloniamatteo/smclib">SMClib&nbsp;<i>arrow_forward</i></a>
-		</p>
 	</div>
-
-	<div class="space"></div>
 
 	<!-- Software -->
-	<div>
-	<article class="indigo no-padding">
-		<h5 id="software" class="left-align medium-padding indigo white-text">
-			<a href="#software">Software</a>
-		</h5>
-	</article>
-
-	<article>
-		<p>If you are interested in hiring me to create a modern Website, or you&apos;re interested in a PC or Android app, click the button below to open the page that contains my contact details, to contact me, discuss about your project, and request for a quotation.</p>
-
-		<nav class="right-align small-margin">
-			<a class="button round" href="contact.html">Contact Details<i>arrow_forward</i></a>
-		</nav>
-	</article>
-
-	<!-- TP-XFan -->
-	<article>
-		<div class="row">
-			<img class="round small" src="../pics/tp-xfan.png" alt="TP-XFan logo">
-			<div class="max">
-				<h6><a href="https://github.com/saloniamatteo/tp-xfan">TP-XFan (ThinkPad XForms Fan)</a></h6>
-				<p>
-				Program to modify the speed of any ThinkPad&apos;s fan. It has a graphical user interface (created with <a class="button round small no-margin" href="http://savannah.nongnu.org/projects/xforms">XForms&nbsp;<i>arrow_forward</i></a>), and the Automatic Fan Speed Management mode (AFSM).
+	<div class="hero u-text-center u-shadow-inset pt-8">
+		<div class="hero-body m-2-sm">
+			<div class="content w-90p w-80p-md">
+			<h2 class="headline-4 text-gray-900">Programs</h2>
+				<p class="lead">
+					Discover all of the programs I developed in C (C99).
 				</p>
+
+				<div class="content u-text-left w-90p-md">
+				<div class="card">
+					<div class="m-3">
+						<!-- TP-XFan -->
+						<div class="tile level">
+							<div class="tile__icon">
+								<figure class="w-6" style="background: white"><img src="../pics/tp-xfan.png" alt="TP-XFan logo"></figure>
+							</div>
+							<div class="tile__container">
+								<p class="tile__title">
+									<a href="https://github.com/saloniamatteo/tp-xfan" class="font-bold text-link-dark text-md u u-LR">
+									TP-XFan (ThinkPad XForms Fan)
+									</a>
+								</p>
+								<p class="tile__subtitle text-black">
+									Program to modify the fan speed of any ThinkPad.
+									It has a graphical user interface (made with XForms), and the automatic fan speed management mode (AFSM)
+								</p>
+							</div>
+						</div>
+
+						<div class="divider"></div>
+
+						<!-- Csnake -->
+						<div class="tile level">
+							<div class="tile__icon">
+								<figure class="avatar w-6" style="background: black"><img src="../pics/csnake.png" alt="Csnake logo"></figure>
+							</div>
+							<div class="tile__container">
+								<p class="tile__title">
+									<a href="https://github.com/saloniamatteo/csnake" class="font-bold text-link-dark text-md u u-LR">
+									Csnake
+									</a>
+								</p>
+								<p class="tile__subtitle text-black">
+									A Snake clone that has a pseudo-graphical user interface using ncurses.
+									It's possible to save scores with a custom name, in any file;
+									also, it's possible to modify the speed/difficutly, and to show screen borders.
+								</p>
+							</div>
+						</div>
+
+						<div class="divider"></div>
+
+						<!-- Quiz -->
+						<div class="tile level">
+							<div class="tile__icon">
+								<figure class="w-6" style="background: white"><img src="../pics/quiz.png" alt="Quiz logo"></figure>
+							</div>
+							<div class="tile__container">
+								<p class="tile__title">
+									<a href="https://github.com/saloniamatteo/quiz" class="font-bold text-link-dark text-md u u-LR">
+									Quiz
+									</a>
+								</p>
+								<p class="tile__subtitle text-black">
+									Program with which you can make small Quizzes and/or take a Quiz.
+									It does not have a graphical user interface; it's used via the terminal, following the text on the screen.
+									It's possible to save scores with a custom name, in any file;
+									also, an easy-to-use Quiz creator is included.
+								</p>
+							</div>
+						</div>
+
+						<div class="divider"></div>
+
+						<!-- Calc -->
+						<div class="tile level">
+							<div class="tile__icon">
+								<figure class="avatar w-6" style="background: #607d8b"><img src="../pics/calc.png" alt="Calc logo"></figure>
+							</div>
+							<div class="tile__container">
+								<p class="tile__title">
+									<a href="https://github.com/saloniamatteo/calc" class="font-bold text-link-dark text-md u u-LR">
+									Calc
+									</a>
+								</p>
+								<p class="tile__subtitle text-black">
+									A simple calculator, with support for bit-shifting,
+									Reverse Polish Notation (RPN), and other special values.
+									It does not have a graphical user interface (like Quiz).
+								</p>
+							</div>
+						</div>
+					</div>
+				</div>
+				</div>
+
+				<div class="mt-8">
+					<a href="index.html">&larr; Go back to the main page</a>
+				</div>
 			</div>
 		</div>
-
-		<nav>
-			<a class="button round" href="https://github.com/saloniamatteo/tp-xfan">Go <i>arrow_forward</i></a>
-		</nav>
-	</article>
-
-	<!-- Csnake -->
-	<article>
-		<div class="row">
-			<img class="circle small" src="../pics/csnake.png" alt="Csnake logo">
-			<div class="max">
-				<h6><a href="https://github.com/saloniamatteo/csnake">Csnake</a></h6>
-				<p>A Snake clone that has a pseudo-graphical user interface using <a class="button round small no-margin" href="https://invisible-island.net/ncurses/announce.html">ncurses <i>arrow_forward</i></a>. It&apos;s possible to save scores with a custom name, in any file; also, it&apos;s possible to modify the speed/difficulty, and to show the screen borders.</p>
-			</div>
-		</div>
-
-		<nav>
-			<a class="button round" href="https://github.com/saloniamatteo/csnake">Go <i>arrow_forward</i></a>
-		</nav>
-	</article>
-
-	<!-- Quiz -->
-	<article>
-		<div class="row">
-			<img class="circle small" src="../pics/quiz.png" alt="Quiz logo">
-			<div class="max">
-				<h6><a href="https://github.com/saloniamatteo/quiz">Quiz</a></h6>
-			<p>Program used to create small Quizzes and/or take a Quiz. It does not have a graphical user interface; you have to use it via the terminal, following the text instructions on the screen. It&apos;s possible to save scores with a custom name, in any file; also, an easy-to-use Quiz creator is included.</p>
-			</div>
-		</div>
-
-		<nav>
-			<a class="button round" href="https://github.com/saloniamatteo/quiz">Go <i>arrow_forward</i></a>
-		</nav>
-	</article>
-
-	<!-- Calc -->
-	<article>
-		<div class="row">
-			<img class="circle small" src="../pics/calc.png" alt="Calc logo">
-			<div class="max">
-				<h6><a href="https://github.com/saloniamatteo/calc">Calc</a></h6>
-			<p>A simple calculator, with bit-shifting support, Reverse Polish Notation (RPN), and other special values. It does not have a graphical user interface (like Quiz).</p>
-			</div>
-		</div>
-
-		<nav>
-			<a class="button round" href="https://github.com/saloniamatteo/calc">Go <i>arrow_forward</i></a>
-		</nav>
-	</article>
 	</div>
-	</div>
+
+	<!-- Footer -->
+	<footer class="footer bg-blue-500 px-4 pb-4 u-shadow-inset">
+		<h5 class="title text-black">Matteo Salonia</h5>
+
+		<a class="font-bold text-black p-2" href="https://salonia.it/it/">IT</a>
+		<a class="font-bold text-black p-2" href="https://salonia.it/en/">EN</a>
+
+		<p class="text-black mt-4 mb-0">&copy; 2023</p>
+	</footer>
 </body>
 </html>
